Remplacement images par textes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -242,9 +242,9 @@ th {
         box-shadow: none !important
     }
     a,
-    a:visited {
+    /* a:visited {
         text-decoration: underline
-    }
+    } */
     a[href]:after {
         content: " (" attr(href) ")"
     }
@@ -1413,7 +1413,7 @@ a {
 a:focus,
 a:hover {
     color: #23527c;
-    text-decoration: underline
+    /* text-decoration: underline */
 }
 
 a:focus {
@@ -4186,7 +4186,7 @@ fieldset[disabled] .btn-link {
 .btn-link:focus,
 .btn-link:hover {
     color: #23527c;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     background-color: transparent
 }
 
