--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img/texture-paper.png");
+    /* background: url("img/texture-paper.png"); */  /*suppression de l'image de fond de la seconde page*/
     background-size: 280px 280px;
 }
 
@@ -99,9 +99,9 @@ a:hover {
     background-attachment: fixed;
 }
 
-.d-bloc {
+/* .d-bloc {
     color: rgba(255, 255, 255, .7);
-}
+} */
 
 .d-bloc button:hover {
     color: rgba(255, 255, 255, .9);
@@ -193,10 +193,10 @@ a:hover {
     border-color: rgba(0, 0, 0, .3);
 }
 
-.d-bloc .panel,
+/* .d-bloc .panel,
 .l-bloc {
     color: rgba(0, 0, 0, .5);
-}
+} */
 
 .d-bloc .panel button:hover,
 .l-bloc button:hover {
@@ -317,16 +317,11 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
-    margin-right: -16px;
+    margin-right: 150px;
     float: right;
-    z-index: 1;
+   
 }
 
-.nav > li {
-    float: left;
-    margin-top: 4px;
-    font-size: 16px;
-}
 
 .navbar-nav .open .dropdown-menu > li > a {
     text-align: inherit;
@@ -654,12 +649,13 @@ a {
    
 }
 
-.container {
-    max-width: 1000px;
-}
+/* .container {
+    max-width: 1000px;         
+} */
 
 .hero-bloc-text {
     font-size: 38px;
+    text-align: center;
 }
 
 .hero-bloc-text-sub {
@@ -677,7 +673,10 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 15px;
+    padding-bottom: 30px;
+    margin-bottom: 20px;     
+    
 }
 
 .tight-width-whitespace {
@@ -776,6 +775,7 @@ h4 {
 .bgc-atomic-tangerine {
     /*background-color: #F3976C; */          
     background-color: #f3975b; /* couleur plus contrasté ajouté au bloc 2 */
+    padding-top: 45px;
 }
 
 .tc-white {
@@ -814,9 +814,9 @@ h4 {
     border-color: #364577!important;
 }
 
-.bg-dots-bg {
-    background-image: url("img/dots-bg.png");
-}
+/* .bg-dots-bg {
+    background-image: url("img/dots-bg.png");                           /suppression de l'image d'arriére plan de la seconde page*/
+} */
 
 .bg-lines-h2-bg {
     background-image: url("img/lines-h2-bg.png");
