--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color:black;
 }
 
 .d-bloc .a-btn:hover,
@@ -673,7 +673,7 @@ a {
 }
 
 p {
-    font-size: 15px;
+    font-size: 20px;
     padding-bottom: 30px;
     margin-bottom: 20px;     
     
@@ -738,7 +738,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: white;
 }
 
 .portfolio-thumb {
@@ -755,7 +755,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(131, 122, 118, 1);   /* Changement de couleur en gris foncé du bloc 2*/
+    background-color:black;  /* Changement de couleur en gris foncé du bloc 2*/
     padding: 40px 40px 40px 40px;
 }
 
@@ -774,7 +774,7 @@ h4 {
 
 .bgc-atomic-tangerine {
     /*background-color: #F3976C; */          
-    background-color: #f3975b; /* couleur plus contrasté ajouté au bloc 2 */
+    background-color: rgba(255, 170, 97, 1);  /* couleur plus contrasté ajouté au bloc 2 */
     padding-top: 45px;
 }
 
