--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1436,8 +1436,8 @@ img {
 .thumbnail a>img,
 .thumbnail>img {
     display: block;
-    width: 270px;
-    height: 250px;
+    width: 100%;
+    height: auto;
 }
 
 .img-rounded {
